# RLII_25

./: .gitignore  HyperparameterTUningCMA.py  README.md  RLII_25.code-workspace  bandit_ex  bash_snippets.md  load_hpo_qmc_from_our_ppo.sh  minigrid_test.py  plot_train_both.py  plot_train_multi.py  pyproject.toml  requirements.txt  run_example.sh  run_example_cluster.sh  run_example_cluster_NameThisGame.sh  run_example_cluster_multi_wandb.sh  run_example_cluster_workspace.sh  run_example_cluster_workspace_tmpdir.sh  run_example_hpo_withinit.sh  run_example_hyperparameters.sh  run_example_hyperparams_opt.sh  run_example_load_hyperparams_opt.sh  run_example_measure_time_devices.sh  run_example_wandb.sh  run_hpoplots.py  run_new_ppo_qmc.sh  run_opti_hpo.sh  run_plots.sh  run_ppo_qmc.sh  run_toby_ppo.sh  run_toby_ppo_cbn.sh  run_toby_ppo_madv.sh  run_toby_ppo_mod_samp.sh  run_toby_ppo_no_clip.sh  test
experiments/: ppo_bandit.py
hyperparams/: PPO_changed_before_Normalization.yml  example.yml  ourppo.yml  ppo.yml  ppo_corrected.yml  ppo_mod_gae_3_fixed_T.yml  ppo_rollout_based.yml
rl_zoo3/: benchmark.py  custom_callbacks.py  enjoy.py  exp_manager.py  hyperparameter_search.py  hyperparams_opt.py  import_envs.py  record_video.py  test  train.py  utils.py
rl_zoo3/cfgs/: cfg_exp_lr.py
rl_zoo3/custom_algos/: PPO_changed_before_Normalization.py  __init__.py  ppo_corrected.py  ppo_corrected_2.py  ppo_corrected_3.py  ppo_corrected_4.py  ppo_corrected_5.py  ppo_corrected_6_2.py  ppo_mod_gae_T.py  ppo_mod_gae_tau.py  ppo_mod_loss.py  ppo_mod_loss_gae_T.py  ppo_mod_loss_gae_tau.py  ppo_mod_sampling.py  ppo_mod_sampling_gae_T.py  ppo_mod_sampling_gae_tau.py  ppo_rollout_based.py
rl_zoo3/custom_buffers/: __init__.py  timed_rollout_buffer.py  timed_rollout_buffer_2.py  timed_rollout_buffer_3.py  timed_rollout_buffer_4.py  timed_rollout_buffer_5.py  timed_rollout_buffer_6.py  timed_rollout_buffer_gae_T.py  timed_rollout_buffer_gae_tau.py
rl_zoo3/custom_callbacks/: callbacks_custom.py
rl_zoo3/custom_evaluation/: evaluation_custom.py
rl_zoo3/custom_policy/: __init__.py  minigrid_extractor.py
rl_zoo3/plots/: all_plots.py  score_normalization.py
(+21 files in other folders)
