[tool.ruff]
# Same as Black.
line-length = 127
# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# See https://beta.ruff.rs/docs/rules/
select = ["E", "F", "B", "UP", "C90", "RUF"]
# Ignore explicit stacklevel`
ignore = ["B028"]

[tool.ruff.lint.per-file-ignores]
"./rl_zoo3/import_envs.py"= ["F401"]
# "./rl_zoo3/plots/plot_train.py"= ["E501"]


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.black]
line-length = 127

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
exclude = """(?x)(
    tests/dummy_env/*$
  )"""

[tool.pytest.ini_options]
# Deterministic ordering for tests; useful for pytest-xdist.
env = [
	"PYTHONHASHSEED=0"
]

filterwarnings = [
    # Tensorboard warnings
    "ignore::DeprecationWarning:tensorboard",
    # Gym warnings
    "ignore::UserWarning:gym",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.coverage.run]
disable_warnings = ["couldnt-parse"]
branch = false
omit = [
	"tests/*",
	"setup.py",
	"rl_zoo3/plots/*",
	"rl_zoo3/push_to_hub.py",
	"scripts/*",
]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "raise NotImplementedError()", "if typing.TYPE_CHECKING:"]

[tool.poetry]
name = "RLII_25"
version = "0.1.0"
description = "These are the configuration files for the lecture RLII HWS25_26"
authors = ["Benedikt Wille <bndkwle@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
gym = "0.26.2"
stable-baselines3 = {version = ">=2.6.1a1,<3.0", extras = ["extra", "tests", "docs"]}
sb3-contrib = {version = ">=2.6.1a1,<3.0", extras = ["extra", "tests", "docs"]}
box2d-py = "2.3.8"
# pybullet-envs-gymnasium = ">=0.6.0"
minigrid = "*"
cloudpickle = ">=2.2.1"
optunahub = ">=0.2.0"
plotly = "*"
wandb = "*"
moviepy = ">=1.0.0"
seaborn = "==0.13.2"
huggingface_sb3 = ">=3.0,<4.0"
rliable = ">=1.0.5"
pytablewriter = "~=0.64"
scikit-optimize = "==0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
